kubernetes/notification/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
      version: "v1"
  template:
    metadata:
      labels:
        app: notification
        version: "v1"
    spec:
      containers:
      - name: notification-app
        image: deepu105/notification
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8083
        readinessProbe:
          httpGet:
            path: /notification/management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /notification/management/health
            port: http
          initialDelaySeconds: 120
