kubernetes/notification/notification-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notification-virtualservice
  namespace: jhipster
spec:
  hosts:
  - notification
  http:
  - route:
    - destination:
        host: notification
        subset: "v1"
      weight: 100
    retries:
      attempts: 3
      perTryTimeout: 2s
